Correction traduction FR

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -23,7 +23,7 @@
     "added": "ajouté",
     "ammo": "munition",
     "armour": "Armure",
-    "available": "Disponibilité",
+    "available": "Disponible",
     "backup": "sauvegarde",
     "bays": "baies",
     "bins": "bacs",
