Modules fully translated with some exceptions

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -83,88 +83,88 @@
     "HELP_MODIFICATIONS_MENU": "Click on a number to enter a new value, or drag along the bar for small changes",
 	"PHRASE_FAIL_EDENGINEER": "Failed to send to EDEngineer (Launch EDEngineer and make sure the API is started then refresh the page.)",
 	"PHRASE_FIREFOX_EDENGINEER": "Sending to EDEngineer is not compatible with Firefox's security settings. Please try again with Chrome.",
-    "am": "Auto Field-Maintenance Unit",
-    "bh": "Bulkheads",
-    "bl": "Beam Laser",
-    "bsg": "Bi-Weave Shield Generator",
-    "c": "Cannon",
-    "causres": "Caustic resistance",
-    "cc": "Collector Limpet Controller",
-    "ch": "Chaff Launcher",
-    "cr": "Cargo Rack",
-    "cs": "Manifest Scanner",
-    "dc": "Docking Computer",
-    "ec": "Electronic Countermeasure",
-    "fc": "Fragment Cannon",
-    "fh": "Fighter Hangar",
-    "fi": "FSD Interdictor",
-    "fs": "Fuel Scoop",
-    "fsd": "Frame Shift Drive",
-    "ft": "Fuel Tank",
-    "fx": "Fuel Transfer Limpet Controller",
-    "hb": "Hatch Breaker Limpet Controller",
-    "hr": "Hull Reinforcement Package",
-    "hs": "Heat Sink Launcher",
-    "kw": "Kill Warrant Scanner",
-    "ls": "Life Support",
-    "mc": "Multi-cannon",
-    "axmc": "AX Multi-cannon",
-    "ml": "Mining Laser",
-    "mr": "Missile Rack",
-    "axmr": "AX Missile Rack",
-    "mrp": "Module Reinforcement Package",
-    "nl": "Mine Launcher",
-    "pa": "Plasma Accelerator",
-    "pas": "Planetary Approach Suite",
-    "pc": "Prospector Limpet Controller",
-    "pce": "Economy Class Passenger Cabin",
-    "passenger capacity": "Passenger Capacity",
-    "pci": "Business Class Passenger Cabin",
-    "pcm": "First Class Passenger Cabin",
-    "pcq": "Luxury Passenger Cabin",
-    "pd": "power distributor",
-    "pl": "Pulse Laser",
-    "po": "Point Defence",
-    "pp": "Power Plant",
-    "gpp": "Guardian Hybrid Power Plant",
-    "gpd": "Guardian Hybrid Power Distributor",
-    "gpc": "Guardian Plasma Charger",
+    "am": "Unité de Maintenance de Terrain Auto",
+    "bh": "Blindage",
+    "bl": "Rayon Laser",
+    "bsg": "Générateur de Bouclier Entrelacé",
+    "c": "Canon",
+    "causres": "Résistance à la Corosion",
+    "cc": "Contrôleur de Drones Collecteur",
+    "ch": "Lanceur de Paillettes",
+    "cr": "Compartiment de Soute",
+    "cs": "Détecteur de Manifeste",
+    "dc": "Ordinateur d'Appontage",
+    "ec": "Contre-Mesures Électronique",
+    "fc": "Canon à Fragmentations",
+    "fh": "Baie de Chasseurs",
+    "fi": "Intercepteur FSD",
+    "fs": "Récupérateur de Carburant",
+    "fsd": "Réacteur à Fréquence Supra Dimensionnelle",
+    "ft": "Réservoir",
+    "fx": "Contrôleur de Drones Ravitailleur",
+    "hb": "Contrôleur de Drones Perce-Soute",
+    "hr": "Renforcement de Coque",
+    "hs": "Éjecteur de Dissipateur Thermique",
+    "kw": "Détecteur d'Avis de Recherche",
+    "ls": "Systèmes de Survie",
+    "mc": "Multi-Canon",
+    "axmc": "Multi-canon AX",
+    "ml": "Laser Minier",
+    "mr": "Batterie de Missiles",
+    "axmr": "Batterie de Missiles AX",
+    "mrp": "Pack de Renforcement de Modules",
+    "nl": "Lance-Mines",
+    "pa": "Accélérateur à Plasma",
+    "pas": "Instruments d'Approche Planétaire",
+    "pc": "Contrôleur de Drones de Prospection",
+    "pce": "Cabine de Passagers de Classe Économie",
+    "passenger capacity": "Capacité de Passagers",
+    "pci": "Cabine de Passagers de Classe Affaires",
+    "pcm": "Cabine de Passagers de Première Classe",
+    "pcq": "Cabine de Passagers de Luxe",
+    "pd": "Répartiteur de Puissance",
+    "pl": "Laser à Impulsion",
+    "po": "Tourelle de Défense Ponctuelle",
+    "pp": "Générateur",
+    "gpp": "Générateur Hybride Guardian",
+    "gpd": "Répartiteur de Puissance Hybride Guardian",
+    "gpc": "Guardian Plasma Charge",
     "ggc": "Guardian Gauss Cannon",
-    "gsrp": "Guardian Shield Reinforcement Package",
-    "gfsb": "Guardian Frame Shift Drive Booster",
-    "ghrp": "Guardian Hull Reinforcement Package",
-    "gmrp": "Guardian Module Reinforcement Package",
-    "pwa": "Pulse Wave Analyser",
-    "abl": "Abrasion Blaster",
-    "scl": "Seismic Charge Launcher",
-    "sdm": "Sub-Surface Displacement Missile",
+    "gsrp": "Pack de Renforcement de Bouclier Guardian",
+    "gfsb": "Survolteur de Réacteur FSD Guardian",
+    "ghrp": "Renforcement de Coque Guardian",
+    "gmrp": "Pack de Renforcement de Modules Guardian",
+    "pwa": "Analyseur à Onde Pulsée",
+    "abl": "Surfaceur Abrasif",
+    "scl": "Lanceur à Charge Sismique",
+    "sdm": "Missile à Charge Pénétrante Souterraine",
     "tbsc": "Shock Cannon",
     "gsc": "Guardian Shard Cannon",
-    "psg": "Prismatic Shield Generator",
-    "pv": "Planetary Vehicle Hangar",
-    "rf": "Refinery",
+    "psg": "Générateur de Bouclier Prismatique",
+    "pv": "Hangars des Véhicules Planétaires",
+    "rf": "Raffinerie",
     "rfl": "Remote Release Flak Launcher",
-    "rg": "Rail Gun",
-    "rsl": "Research Limpet Controller",
-    "s": "Sensors",
-    "sb": "Shield Booster",
+    "rg": "Canon Électrique",
+    "rsl": "Contrôleur de Drones de Recherche",
+    "s": "Capteurs",
+    "sb": "Survolteur de Bouclier",
     "sc": "Stellar Scanners",
-    "scb": "Shield Cell Bank",
-    "sfn": "Shutdown Field Neutraliser",
-    "sg": "Shield Generator",
-    "ss": "Surface Scanners",
-    "sua": "Supercruise Assist",
-    "t": "thrusters",
-    "tp": "Torpedo Pylon",
-    "ul": "Burst Laser",
-    "Send To EDEngineer": "Send To EDEngineer",
-    "ws": "Frame Shift Wake Scanner",
-    "rpl": "Repair Limpet Controller",
-    "rcpl": "Recon Limpet Controller",
-    "xs": "Xeno Scanner",
+    "scb": "Réserve de Cellules d'Énergie",
+    "sfn": "Neutralisateur de Champ Incapacitant",
+    "sg": "Générateur de Bouclier",
+    "ss": "Détecteur de Surface Détailé",
+    "sua": "Super-Navigation Assistée",
+    "t": "Propulseurs",
+    "tp": "Tube Lance-Torpille",
+    "ul": "Laser à Rafale",
+    "Send To EDEngineer": "Envoyer à EDEngineer",
+    "ws": "Détecteur de Sillage FSD",
+    "rpl": "Contrôleur de Drones Réparateur",
+    "rcpl": "Contrôleur de Drones de Reconnaissance",
+    "xs": "Détecteur de Xénomorphes",
     "tbem": "Enzyme Missile Rack",
     "tbrfl": "Remote Release Flechette Launcher",
-    "dtl": "Decontamination Limpet Controller",
+    "dtl": "Contrôleur de Drones de Décontamination",
     "mahr": "Meta Alloy Hull Reinforcement Package",
     "emptyrestricted": "empty (restricted)",
     "damage dealt to": "Damage dealt to",
