Former PHRASE translations added

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -1,18 +1,18 @@
 {
     "PHRASE_ALT_ALL": "Alt + Click to fill all slots",
-    "PHRASE_BACKUP_DESC": "Backup of all Coriolis data to save or transfer to another browser/device",
-    "PHRASE_CONFIRMATION": "Are you sure?",
-    "PHRASE_EXPORT_DESC": "A detailed JSON export of your build for use in other sites and tools",
-    "PHRASE_FASTEST_RANGE": "Consecutive max range jumps",
-    "PHRASE_IMPORT": "Paste JSON or import here",
-    "PHRASE_LADEN": "Ship mass + fuel + cargo",
-    "PHRASE_NO_BUILDS": "No builds added to comparison!",
-    "PHRASE_NO_RETROCH": "No Retrofitting changes",
-    "PHRASE_SELECT_BUILDS": "Select builds to compare",
-    "PHRASE_SG_RECHARGE": "Time from 50% to 100% charge, assuming full SYS capacitor to start with",
-    "PHRASE_SG_RECOVER": "Time from 0% to 50% charge, assuming full SYS capacitor to start with",
-    "PHRASE_UNLADEN": "Ship mass excluding fuel and cargo",
-    "PHRASE_UPDATE_RDY": "Update Available! Click to refresh",
+    "PHRASE_BACKUP_DESC": "Copie des données Coriolis pour sauvegarde ou utilisation dans d'autres navigateur/appareil",
+    "PHRASE_CONFIRMATION": "Êtes-vous sûr ?",
+    "PHRASE_EXPORT_DESC": "Un export détaillé en JSON de votre configuration pour l'utilisation dans d'autres sites et outils",
+    "PHRASE_FASTEST_RANGE": "Portée maximale en cas de sauts successifs",
+    "PHRASE_IMPORT": "Coller JSON ou importer ici",
+    "PHRASE_LADEN": "Masse du Vaisseau + Carburant + Cargo",
+    "PHRASE_NO_BUILDS": "Aucune configuration ajoutée pour la comparaison !",
+    "PHRASE_NO_RETROCH": "Aucun changement de configuration",
+    "PHRASE_SELECT_BUILDS": "Sélectionner les configurations à comparer",
+    "PHRASE_SG_RECHARGE": "Temps de charge de 50% à 100%, avec les SYS pleins au départ",
+    "PHRASE_SG_RECOVER": "Temps de charge de 0% à 50%, avec les SYS pleins au départ",
+    "PHRASE_UNLADEN": "Masse du Vaisseau hors Carburant et Cargo",
+    "PHRASE_UPDATE_RDY": "Mise à jour disponible ! Cliquez pour rafraichir",
     "PHRASE_ENGAGEMENT_RANGE": "The distance between your ship and its target",
     "PHRASE_SELECT_BLUEPRINT": "Click to select a blueprint",
     "PHRASE_BLUEPRINT_WORST": "Worst primary values for this blueprint",
