Federal ranks translated

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -324,22 +324,22 @@
     "never": "never",
     "stock": "stock",
     "boost": "boost",
-	"tab_defence": "defence",
-    "federation rank 1": "Recruit",
+	"tab_defence": "Défense",
+    "federation rank 1": "Recrue",
     "federation rank 2": "Cadet",
-    "federation rank 3": "Midshipman",
-    "federation rank 4": "Petty Officer",
-    "federation rank 5": "Chief Petty Officer",
-    "federation rank 6": "Warrant Officer",
-    "federation rank 7": "Ensign",
+    "federation rank 3": "Matelot",
+    "federation rank 4": "Second Maître",
+    "federation rank 5": "Premier Maïtre",
+    "federation rank 6": "Major",
+    "federation rank 7": "Enseigne",
     "federation rank 8": "Lieutenant",
-    "federation rank 9": "Lieutenant Commander",
-    "federation rank 10": "Post Commander",
-    "federation rank 11": "Post Captain",
-    "federation rank 12": "Rear Admiral",
+    "federation rank 9": "Capitaine de Corvette",
+    "federation rank 10": "Capitaine de Vaisseau",
+    "federation rank 11": "Contre-Amiral",
+    "federation rank 12": "Vice-Amiral",
     "federation rank 13": "Vice Admiral",
-    "federation rank 14": "Admiral",
-    "federation rank required": "Minimum Federation rank required to purchase",
+    "federation rank 14": "Amiral",
+    "federation rank required": "Rang Fédéral minimum pour l'achat",
     "empire rank 1": "Outsider",
     "empire rank 2": "Serf",
     "empire rank 3": "Master",
