Empire ranks translated + minor changes

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -339,22 +339,22 @@
     "federation rank 12": "Vice-Amiral",
     "federation rank 13": "Vice Admiral",
     "federation rank 14": "Amiral",
-    "federation rank required": "Rang Fédéral minimum pour l'achat",
-    "empire rank 1": "Outsider",
+    "federation rank required": "Rang minimum de la Fédération requis pour l'achat",
+    "empire rank 1": "Étranger",
     "empire rank 2": "Serf",
-    "empire rank 3": "Master",
-    "empire rank 4": "Squire",
-    "empire rank 5": "Knight",
-    "empire rank 6": "Lord",
+    "empire rank 3": "Vilain",
+    "empire rank 4": "Écuyer",
+    "empire rank 5": "Chevalier",
+    "empire rank 6": "Banneret",
     "empire rank 7": "Baron",
-    "empire rank 8": "Viscount",
-    "empire rank 9": "Count",
-    "empire rank 10": "Earl",
-    "empire rank 11": "Marquis",
-    "empire rank 12": "Duke",
+    "empire rank 8": "Vicomte",
+    "empire rank 9": "Comte",
+    "empire rank 10": "Marquis",
+    "empire rank 11": "Duc",
+    "empire rank 12": "Archiduc",
     "empire rank 13": "Prince",
-    "empire rank 14": "King",
-    "empire rank required": "Minimum Empire rank required to purchase",
+    "empire rank 14": "Roi",
+    "empire rank required": "Rang minimum de l'Empire requis pour l'achat",
     "horizons": "Horizons",
     "horizons required": "Only available to those who have purchased Elite Dangerous: Horizons",
     "horizons early adoption": "Horizons Early Adopter",
