All PHRASE sentences translated, excepted 2

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-    "PHRASE_ALT_ALL": "Alt + Click to fill all slots",
+    "PHRASE_ALT_ALL": "Alt + Click pour remplir tous les emplacements",
     "PHRASE_BACKUP_DESC": "Copie des données Coriolis pour sauvegarde ou utilisation dans d'autres navigateur/appareil",
     "PHRASE_CONFIRMATION": "Êtes-vous sûr ?",
     "PHRASE_EXPORT_DESC": "Un export détaillé en JSON de votre configuration pour l'utilisation dans d'autres sites et outils",
@@ -13,41 +13,41 @@
     "PHRASE_SG_RECOVER": "Temps de charge de 0% à 50%, avec les SYS pleins au départ",
     "PHRASE_UNLADEN": "Masse du Vaisseau hors Carburant et Cargo",
     "PHRASE_UPDATE_RDY": "Mise à jour disponible ! Cliquez pour rafraichir",
-    "PHRASE_ENGAGEMENT_RANGE": "The distance between your ship and its target",
-    "PHRASE_SELECT_BLUEPRINT": "Click to select a blueprint",
-    "PHRASE_BLUEPRINT_WORST": "Worst primary values for this blueprint",
-    "PHRASE_BLUEPRINT_FIFTY": "50% of full values for this blueprint",
-    "PHRASE_BLUEPRINT_SEVEN_FIVE": "75% of full values for this blueprint",
-    "PHRASE_BLUEPRINT_RANDOM": "Random selection between worst and best primary values for this blueprint",
-    "PHRASE_BLUEPRINT_BEST": "Best primary values for this blueprint",
-    "PHRASE_BLUEPRINT_EXTREME": "Best beneficial and worst detrimental primary values for this blueprint",
-    "PHRASE_BLUEPRINT_RESET": "Remove all modifications and blueprint",
-    "PHRASE_SELECT_SPECIAL": "Click to select an experimental effect",
-    "PHRASE_NO_SPECIAL": "No experimental effect",
-    "PHRASE_SHOPPING_LIST": "Stations that sell this build",
-    "PHRASE_SHOPPING_MATS": "Materials needed for this build",
-    "PHRASE_REFIT_SHOPPING_LIST": "Stations that sell required modules",
-    "PHRASE_TOTAL_EFFECTIVE_SHIELD": "Total amount of damage that can be taken from each damage type, if using all shield cells",
-    "PHRASE_TIME_TO_LOSE_SHIELDS": "Shields will hold for",
-    "PHRASE_TIME_TO_RECOVER_SHIELDS": "Shields will recover in",
-    "PHRASE_TIME_TO_RECHARGE_SHIELDS": "Shields will recharge in",
-    "PHRASE_SHIELD_SOURCES": "Breakdown of the supply of shield energy",
-    "PHRASE_EFFECTIVE_SHIELD": "Effective shield strength against different damage types",
-    "PHRASE_ARMOUR_SOURCES": "Breakdown of the supply of armour",
-    "PHRASE_EFFECTIVE_ARMOUR": "Effective armour strength against different damage types",
-    "PHRASE_DAMAGE_TAKEN": "% of raw damage taken for different damage types",
-    "PHRASE_TIME_TO_LOSE_ARMOUR": "Armour will hold for",
-    "PHRASE_MODULE_PROTECTION_EXTERNAL": "Protection for hardpoints",
-    "PHRASE_MODULE_PROTECTION_INTERNAL": "Protection for all other modules",
-    "PHRASE_OVERALL_DAMAGE": "Breakdown of sources for sustained DPS",
-    "PHRASE_SHIELD_DAMAGE": "Breakdown of sources for sustained DPS against shields",
-    "PHRASE_ARMOUR_DAMAGE": "Breakdown of sources for sustained DPS against armour",
-    "PHRASE_TIME_TO_REMOVE_SHIELDS": "Will remove shields in",
-    "PHRASE_MULTI_CREW_CAPACITOR_POINTS": "Right click a capacitor to assign multi-crew capacitor points.",
+    "PHRASE_ENGAGEMENT_RANGE": "La distance entre votre vaisseau et la cible",
+    "PHRASE_SELECT_BLUEPRINT": "Cliquez pour sélectionner un schéma",
+    "PHRASE_BLUEPRINT_WORST": "Pire valeurs primaire pour ce schéma",
+    "PHRASE_BLUEPRINT_FIFTY": "50% de la valeur totale de ce schéma",
+    "PHRASE_BLUEPRINT_SEVEN_FIVE": "75% de la valeur totale de ce schéma",
+    "PHRASE_BLUEPRINT_RANDOM": "Sélection aléatoire entre la pire et la meilleure valeur primaire pour ce schéma",
+    "PHRASE_BLUEPRINT_BEST": "Meilleure valeur primaire pour ce schéma",
+    "PHRASE_BLUEPRINT_EXTREME": "Valeurs primaires les plus bénéfiques et désaventageuses pour ce schéma",
+    "PHRASE_BLUEPRINT_RESET": "Retirer toutes les modifications et schéma",
+    "PHRASE_SELECT_SPECIAL": "Cliquez pour sélectionner un effet expérimental",
+    "PHRASE_NO_SPECIAL": "Pas d'effet expérimental",
+    "PHRASE_SHOPPING_LIST": "Stations vendant cette configuration",
+    "PHRASE_SHOPPING_MATS": "Matériaux requis pour cette configuration",
+    "PHRASE_REFIT_SHOPPING_LIST": "Stations vendant les modules requis",
+    "PHRASE_TOTAL_EFFECTIVE_SHIELD": "Total des dommages pouvant être subis pour chaque type de dommage, si toutes les cellules de bouclier sont utilisées",
+    "PHRASE_TIME_TO_LOSE_SHIELDS": "Le bouclier tiendra pendant",
+    "PHRASE_TIME_TO_RECOVER_SHIELDS": "Le bouclier sera récupéré en",
+    "PHRASE_TIME_TO_RECHARGE_SHIELDS": "Le bouclier sera rechargé en",
+    "PHRASE_SHIELD_SOURCES": "Répartition des sources de bouclier",
+    "PHRASE_EFFECTIVE_SHIELD": "Résistance effective du bouclier contre des dommages de différents types",
+    "PHRASE_ARMOUR_SOURCES": "Répartition des sources d'armure",
+    "PHRASE_EFFECTIVE_ARMOUR": "Résistance effective de l'armure contre différents types de dommages",
+    "PHRASE_DAMAGE_TAKEN": "% des dommages bruts subis pour différents types de dommages",
+    "PHRASE_TIME_TO_LOSE_ARMOUR": "L'armure tiendra pendant",
+    "PHRASE_MODULE_PROTECTION_EXTERNAL": "Protection pour les points d'emports",
+    "PHRASE_MODULE_PROTECTION_INTERNAL": "Protection pour les autres modules",
+    "PHRASE_OVERALL_DAMAGE": "Répartition des sources de DPS soutenus",
+    "PHRASE_SHIELD_DAMAGE": "Répartition des sources de DPS soutenus contre les boucliers",
+    "PHRASE_ARMOUR_DAMAGE": "Répartition des sources de DPS soutenus contre l'armure",
+    "PHRASE_TIME_TO_REMOVE_SHIELDS": "Retira le bouclier en",
+    "PHRASE_MULTI_CREW_CAPACITOR_POINTS": "Clic droit sur un condensateur pour ajouter un PIP de multi-crew",
     "TT_TIME_TO_REMOVE_SHIELDS": "With sustained fire by all weapons",
-    "PHRASE_TIME_TO_REMOVE_ARMOUR": "Will remove armour in",
+    "PHRASE_TIME_TO_REMOVE_ARMOUR": "Retira l'armure en",
     "TT_TIME_TO_REMOVE_ARMOUR": "With sustained fire by all weapons",
-    "PHRASE_TIME_TO_DRAIN_WEP": "Will drain WEP in",
+    "PHRASE_TIME_TO_DRAIN_WEP": "Vidra les ARM en",
     "TT_TIME_TO_DRAIN_WEP": "Time to  drain WEP capacitor with all weapons firing",
     "TT_TIME_TO_LOSE_SHIELDS": "Against sustained fire from all opponent's weapons",
     "TT_TIME_TO_LOSE_ARMOUR": "Against sustained fire from all opponent's weapons",
@@ -81,8 +81,8 @@
     "TT_SUMMARY_UNLADEN_TOTAL_JUMP": "Farthest possible range with no cargo, a full fuel tank, and jumping as far as possible each time",
     "TT_SUMMARY_LADEN_TOTAL_JUMP": "Farthest possible range with full cargo, a full fuel tank, and jumping as far as possible each time",
     "HELP_MODIFICATIONS_MENU": "Click on a number to enter a new value, or drag along the bar for small changes",
-	"PHRASE_FAIL_EDENGINEER": "Failed to send to EDEngineer (Launch EDEngineer and make sure the API is started then refresh the page.)",
-	"PHRASE_FIREFOX_EDENGINEER": "Sending to EDEngineer is not compatible with Firefox's security settings. Please try again with Chrome.",
+    "PHRASE_FAIL_EDENGINEER": "Échec de l'envoi à EDEngienne (Lancer EDEngineer et vérifier que l'API est démarrée, puis rafraichir cette page)",
+    "PHRASE_FIREFOX_EDENGINEER": "L'envoi à EDEngineer n'est pas compatible avec les paramètres de sécurité de Firefox. Réessayez avec Chrome",
     "am": "Unité de Maintenance de Terrain Auto",
     "bh": "Blindage",
     "bl": "Rayon Laser",
