Most of the TT sentences translated

--- a/src/app/i18n/fr.json
+++ b/src/app/i18n/fr.json
@@ -44,43 +44,43 @@
     "PHRASE_ARMOUR_DAMAGE": "Répartition des sources de DPS soutenus contre l'armure",
     "PHRASE_TIME_TO_REMOVE_SHIELDS": "Retira le bouclier en",
     "PHRASE_MULTI_CREW_CAPACITOR_POINTS": "Clic droit sur un condensateur pour ajouter un PIP de multi-crew",
-    "TT_TIME_TO_REMOVE_SHIELDS": "With sustained fire by all weapons",
+    "TT_TIME_TO_REMOVE_SHIELDS": "Avec un tir soutenu de toutes les armes",
     "PHRASE_TIME_TO_REMOVE_ARMOUR": "Retira l'armure en",
-    "TT_TIME_TO_REMOVE_ARMOUR": "With sustained fire by all weapons",
+    "TT_TIME_TO_REMOVE_ARMOUR": "Avec un tir soutenu de toutes les armes",
     "PHRASE_TIME_TO_DRAIN_WEP": "Vidra les ARM en",
-    "TT_TIME_TO_DRAIN_WEP": "Time to  drain WEP capacitor with all weapons firing",
-    "TT_TIME_TO_LOSE_SHIELDS": "Against sustained fire from all opponent's weapons",
-    "TT_TIME_TO_LOSE_ARMOUR": "Against sustained fire from all opponent's weapons",
-    "TT_MODULE_ARMOUR": "Armour protecting against module damage",
-    "TT_MODULE_PROTECTION_EXTERNAL": "Percentage of damage diverted from hardpoints to module reinforcement packages",
-    "TT_MODULE_PROTECTION_INTERNAL": "Percentage of damage diverted from non-hardpoint modules to module reinforcement packages",
+    "TT_TIME_TO_DRAIN_WEP": "Temps pour vider les ARM avec toutes les armes faisant feu",
+    "TT_TIME_TO_LOSE_SHIELDS": "Contre un feu soutenus de toutes les armes ennemies",
+    "TT_TIME_TO_LOSE_ARMOUR": "Contre un feu soutenus de toutes les armes ennemies",
+    "TT_MODULE_ARMOUR": "Protection de l'armure contre les dégâts aux modules",
+    "TT_MODULE_PROTECTION_EXTERNAL": "Pourcentage des dégâts déviés des points d'emports vers les Packs de Renforcement de Module",
+    "TT_MODULE_PROTECTION_INTERNAL": "Pourcentage des dégâts déviés des modules internes ou utilitaires vers les Packs de Renforcement de Module",
     "TT_EFFECTIVE_SDPS_SHIELDS": "Actual sustained DPS whilst WEP capacitor is not empty",
     "TT_EFFECTIVENESS_SHIELDS": "Effectivness compared to hitting a 0-resistance target with 0 pips to SYS at 0m",
     "TT_EFFECTIVE_SDPS_ARMOUR": "Actual sustained DPS whilst WEP capacitor is not empty",
     "TT_EFFECTIVENESS_ARMOUR": "Effectivness compared to hitting a 0-resistance target at 0m",
     "PHRASE_EFFECTIVE_SDPS_SHIELDS": "SDPS against shields",
     "PHRASE_EFFECTIVE_SDPS_ARMOUR": "SDPS against armour",
-    "TT_SUMMARY_SPEED": "With full fuel tank and 4 pips to ENG",
-    "TT_SUMMARY_SPEED_NONFUNCTIONAL": "Thrusters powered off or over maximum mass with full fuel and cargo loads",
-    "TT_SUMMARY_BOOST": "With full fuel tank and 4 pips to ENG",
-    "TT_SUMMARY_BOOST_INTERVAL": "Time between each boost with 4 pips to ENG",
-    "TT_SUMMARY_BOOST_NONFUNCTIONAL": "Power distributor not able to supply enough power to boost",
-    "TT_SUMMARY_SHIELDS": "Raw shield strength, including boosters",
-    "TT_SUMMARY_SHIELDS_SCB": "Raw shield strength, including boosters and SCBs",
-    "TT_SUMMARY_SHIELDS_NONFUNCTIONAL": "No shield generator or shield generator powered off",
-    "TT_SUMMARY_INTEGRITY": "Ship integrity, including bulkheads and hull reinforcement packages",
-    "TT_SUMMARY_HULL_MASS": "Mass of the hull prior to any modules being installed",
-    "TT_SUMMARY_UNLADEN_MASS": "Mass of the hull and modules prior to any fuel or cargo",
-    "TT_SUMMARY_LADEN_MASS": "Mass of the hull and modules with full fuel and cargo",
-    "TT_SUMMARY_DPS": "Damage per second with all weapons firing",
-    "TT_SUMMARY_EPS": "WEP capacitor consumed per second with all weapons firing",
-    "TT_SUMMARY_TTD": "Time to drain WEP capacitor with all weapons firing and 4 pips to WEP",
-    "TT_SUMMARY_MAX_SINGLE_JUMP": "Farthest possible jump range with no cargo and only enough fuel for the jump itself",
-    "TT_SUMMARY_UNLADEN_SINGLE_JUMP": "Farthest possible jump range with no cargo and a full fuel tank",
-    "TT_SUMMARY_LADEN_SINGLE_JUMP": "Farthest possible jump range with full cargo and a full fuel tank",
-    "TT_SUMMARY_UNLADEN_TOTAL_JUMP": "Farthest possible range with no cargo, a full fuel tank, and jumping as far as possible each time",
-    "TT_SUMMARY_LADEN_TOTAL_JUMP": "Farthest possible range with full cargo, a full fuel tank, and jumping as far as possible each time",
-    "HELP_MODIFICATIONS_MENU": "Click on a number to enter a new value, or drag along the bar for small changes",
+    "TT_SUMMARY_SPEED": "Avec le réservoir plein et 4 PIPs dans les MOT",
+    "TT_SUMMARY_SPEED_NONFUNCTIONAL": "Propulseurs hors tension ou dépassant la masse maximale avec le réservoir plein et une cargaison complète",
+    "TT_SUMMARY_BOOST": "Avec le réservoir plein et 4 PIPs dans les MOT",
+    "TT_SUMMARY_BOOST_INTERVAL": "Temps entre chaque boost avec 4 PIPs dans les MOT",
+    "TT_SUMMARY_BOOST_NONFUNCTIONAL": "Le répartiteur de puissance ne peut pas fournir assez de puissance pour boost",
+    "TT_SUMMARY_SHIELDS": "Puissance brute du bouclier, survolteurs compris",
+    "TT_SUMMARY_SHIELDS_SCB": "Puissance brute du bouclier, Survolteurs et Cellules d'Énergie compris",
+    "TT_SUMMARY_SHIELDS_NONFUNCTIONAL": "Pas de générateur de bouclier ou générateur désactivé",
+    "TT_SUMMARY_INTEGRITY": "Intégrité du vaisseau, incluant le Blindage et les Renforcements de Coque ",
+    "TT_SUMMARY_HULL_MASS": "Masse de la coque avant l'installation de modules",
+    "TT_SUMMARY_UNLADEN_MASS": "Masse de la coque et des modules, sans cargaison ni carburant",
+    "TT_SUMMARY_LADEN_MASS": "Masse de la coque et des modules avec un réservoir plein et une cargaison complète",
+    "TT_SUMMARY_DPS": "Dégâts par seconde avec toutes les armes faisant feu",
+    "TT_SUMMARY_EPS": "Consommation par seconde des ARM avec toutes les armes faisant feu",
+    "TT_SUMMARY_TTD": "Temps pour vider les ARM avec feu de toutes les armes et 4 PIPs dans les ARM",
+    "TT_SUMMARY_MAX_SINGLE_JUMP": "Plus grande portée de saut sans cargaison et avec juste assez de carburant pour le saut",
+    "TT_SUMMARY_UNLADEN_SINGLE_JUMP": "Plus grande portée de saut possible, sans cargaison et le réservoir plein",
+    "TT_SUMMARY_LADEN_SINGLE_JUMP": "Plus grande portée de saut possible, avec une cargaison complet et le réservoir pleins ",
+    "TT_SUMMARY_UNLADEN_TOTAL_JUMP": "Plus grand rayon d'action, sans cargaison, avec un réservoir plein et en sautant le plus loin possible à chaque saut",
+    "TT_SUMMARY_LADEN_TOTAL_JUMP": "Plus grand rayon d'action, avec une cargaison complète, avec un réservoir plein et en sautant le plus loin possible à chaque saut",
+    "HELP_MODIFICATIONS_MENU": "Cliquez sur une valeur pour en entrer une nouvelle, ou faites glisser la barre pour faire de petits changements",
     "PHRASE_FAIL_EDENGINEER": "Échec de l'envoi à EDEngienne (Lancer EDEngineer et vérifier que l'API est démarrée, puis rafraichir cette page)",
     "PHRASE_FIREFOX_EDENGINEER": "L'envoi à EDEngineer n'est pas compatible avec les paramètres de sécurité de Firefox. Réessayez avec Chrome",
     "am": "Unité de Maintenance de Terrain Auto",
